--- a/Assignment MSB104.Rmd
+++ b/Assignment MSB104.Rmd
@@ -323,6 +323,7 @@ This summarise above shows total GDP per capita for the last 20 years. It is 12 
 
 ```{r}
 summary(SK)
+
 ```
 In the summary above, we see that Slovakia has had an increase in both GDP per capita and population over the past years. GDP pr capita has had a big increase, and we see a difference from 3rd quartile until max in population. In poplutaion we can se a Steady development.  
 
@@ -360,7 +361,6 @@ DK %<>%
 #Nuts 1 id
 DK %<>%  
   mutate(id_nuts0 = substr(Regio_id,1,2))
-
 #gen weighted gini
 #for all
 gini.wtd(DK$Per_capita, w = DK$Population)
@@ -368,9 +368,8 @@ gini.wtd(DK$Per_capita, w = DK$Population)
 
 DK %<>% 
    group_by(id_nuts2, Year) %>%
-  mutate(gini_n2 = gini.wtd(Per_capita, w = Population)) %>%
+  mutate(gini_n2= gini.wtd(Per_capita, w = Population)) %>%
   ungroup() # to remove grouping
-
 summary(DK$gini_n2 )
 
 ```
@@ -379,7 +378,8 @@ summary(DK$gini_n2 )
 #| echo = FALSE
   ggplot(DK, aes(x = Year, y=gini_n2, fill=id_nuts2, color=id_nuts2)) +
   geom_point(lwd = .8) +
-   labs(x = "Year", y = "GDP")
+   labs(x = "Year", y = "Gini")
+
 ```
 
 ```{r Outliers in Denmark}
@@ -420,7 +420,7 @@ summary(FR1$gini_n2 )
 #| echo = FALSE
   ggplot(FR1, aes(x = Year, y=gini_n2, fill=id_nuts2, color=id_nuts2)) +
   geom_point(lwd = .8) +
-   labs(x = "Year", y = "GDP")
+   labs(x = "Year", y = "Gini")
 ```
 
 ```{r}
@@ -461,7 +461,7 @@ summary(HU$gini_n2 )
 #| echo = FALSE
   ggplot(HU, aes(x = Year, y=gini_n2, fill=id_nuts2, color=id_nuts2)) +
   geom_point(lwd = .8) +
-   labs(x = "Year", y = "GDP")
+   labs(x = "Year", y = "Gini")
 ```
 
 ```{r}
@@ -501,7 +501,7 @@ summary(PT$gini_n2 )
 #| echo = FALSE
   ggplot(PT, aes(x = Year, y=gini_n2, fill=id_nuts2, color=id_nuts2)) +
   geom_point(lwd = .8) +
-   labs(x = "Year", y = "GDP")
+   labs(x = "Year", y = "Gini")
 ```
 
 ```{r}
@@ -536,7 +536,7 @@ summary(SK$gini_n2)
 #| echo = FALSE
   ggplot(SK, aes(x = Year, y=gini_n2, fill=id_nuts2, color=id_nuts2)) +
   geom_point(lwd = .8) +
-   labs(x = "Year", y = "GDP")
+   labs(x = "Year", y = "Gini")
 ```
 
 ```{r}
@@ -554,6 +554,7 @@ Then we calculated the Gini coefficient for all the nuts 2 regions in our countr
 At the second assigment we are looking at growth and inequity. We are going to estimate the effect if regional development on regional inequality, for the year 2010. Then we will disuse the goodness of fit of our estimated model.
 We will plot the relationship between regional development and regional inequality and the fitted line corresponding to our estimate. We are also going to plot the residuals against the predicted values of our model.
 There will be a discussion about the classical assumptions OLS in light of our data and plots and other determinants of inequity.
+
 We will also go back on Eurostat´s webpages and  download EurostatLinks to an external site. It will be for our subset of countries regional (NUTS2, j) data related to transport infrastructure, education and demographics. We are suppose to select on variable per category that we would like to explore further in there relationship to regional inequality.
 We will try to estimate a multiple linear regression model with our new variables for 2010 and give a small interpretation of our findings.
 In the end we will discuss the overall fit of our model and the inference related to our findings.
@@ -562,8 +563,6 @@ In the end we will discuss the overall fit of our model and the inference relate
 
 We want to look at the amount of people who have higher education in the education data set and how many motorways there is in kilometers when we look in the transport dataset. In the demographic data set we want to look at the life expectancy age.
 
-
-### Growth and inequity
 ```{r Data set Education }
 #| echo = FALSE
 Education <- read_csv('education.csv',show_col_types = FALSE )
@@ -592,16 +591,17 @@ mutate(lea = OBS_VALUE, Year = TIME_PERIOD, id_nuts2=geo) %>%
 #| echo = FALSE
 BNP3 <- BNP2 %>%
   mutate(id_nuts2 = substr(Regio_id,1,4))%>%
-  mutate(Gini = GDP / Population * 1000000) %>%
+  mutate(Gini = gini.wtd(Per_capita, w = Population)) %>%
 select(id_nuts2, Year, Population, GDP, Per_capita, Gini)
-
-# new dataset to 
+# vi har mange dobble nuts2 regioner, hvordan løse dette?
 ```
-mutate(id_nuts2 = substr(Regio_id,1,4))%>%
-select(id_nuts2, Year, Population, GDP, per_capita)%>%
-filter(Year==2010)%>%
 
-```{r}
+## Growth and inequity
+
+Further in the thesis, we will look at growth and inequity in the regions at Nuts2 level. we will look at the development in the regions in relation to the economy. if there is great inequality in the world, rich countries will become richer and poor countries will become poorer. which will create an underclass, where people will have less education and poorer living conditions.
+
+
+```{r New variables}
 #| echo = FALSE
 BNP2010 <- BNP3 %>%
   filter(Year == 2010)%>%
@@ -621,12 +621,6 @@ BNP2010 %>%
 
 ```{r}
 #| echo = FALSE
-BNP2010 <- BNP2010 %>%
-  filter(Gini > 0)
-```
-
-```{r}
-#| echo = FALSE
 Denmark2010 <- BNP2010 %>%
   filter(Nuts0=="DK") 
 France2010 <- BNP2010 %>%
@@ -643,12 +637,13 @@ Slovakia2010 <- BNP2010 %>%
 
 ```{r}
 #| echo = FALSE
-# create function to calculate linear regression model
+# create a function to calculate lmr 
 lm_function_plot <- function(lmdata){
   lm_bnpcap <- lm(Gini ~ log_bnppc, data = lmdata)
  bnpcap1 <- lm_bnpcap$coefficients[1]
   bnpcap2 <- lm_bnpcap$coefficients[2]
-  # create plot for l.reg. model
+ 
+   # create plot 
   lmdata %>%
     ggplot(aes(x =log_bnppc, y=Gini, fill=id_nuts2, color=id_nuts2, label=id_nuts2)) +
     geom_point(lwd = .8) +
@@ -656,7 +651,7 @@ lm_function_plot <- function(lmdata){
     geom_abline(intercept = bnpcap1, slope = bnpcap2, color="yellow", size=0.8) + 
     labs(x = "log(GDP per capita)", y = "Gini")
 }
-# create function to calculate linear regression model
+# create a function to calculate lmr2
 lm_residuals_plot <- function(lmdata){
   lm_bnpcap <- lm(Gini ~ log_bnppc, data = lmdata)
   bnpcap1 <- lm_bnpcap$coefficients[1]
@@ -664,7 +659,7 @@ lm_residuals_plot <- function(lmdata){
   lmdata$predicted <- predict(lm_bnpcap)
   lmdata$residuals <- residuals(lm_bnpcap)
   
-  # create plot for l.reg. model
+  # create plot2
   lmdata %>%
     ggplot(aes(x =log_bnppc, y=Gini, fill=id_nuts2, color=id_nuts2)) +
     geom_point(lwd = .8) +
@@ -674,9 +669,7 @@ lm_residuals_plot <- function(lmdata){
 }
 ```
 
-```{r}
-#| label: tbl-log-gdppc
-#| tbl-cap: Estimate effect of regional development on regional inequality
+```{r lm all}
 lm.1 = lm(Gini ~ log_bnppc, data = Denmark2010)
 lm.2 = lm(Gini ~ log_bnppc, data = France2010)
 lm.3 = lm(Gini ~ log_bnppc, data = Hungary2010)
@@ -722,6 +715,7 @@ lm_function_plot(Portugal2010)
 #| fig-cap: Estimate for Slovakia
 lm_function_plot(Slovakia2010)
 ```
+
 ```{r}
 #| label: fig-residuals-Denmark
 #| fig-cap: Residuals Denmark
@@ -751,18 +745,17 @@ lm_residuals_plot(Portugal2010)
 #| fig-cap: Residuals Slovakia
 lm_residuals_plot(Slovakia2010)
 ```
+
 ```{r}
 BNP2010 %>%
   filter(Year==2010 & nuts0=="DK") %>%
 ggplot(aes(x =edu, y=Gini, fill=id_nuts2, color=id_nuts2)) +
   geom_point(lwd = .8) +
    labs(x = "Education", y = "Gini")
-
 ```
 
 
 ```{r}
-
 multi_linear_regression_model_1 <- function(mlrdata){
 lm.1 = lm(Gini ~ edu , mlrdata) 
 lm.2 = lm(Gini ~  Road, mlrdata)
