--- a/Assignment MSB104.Rmd
+++ b/Assignment MSB104.Rmd
@@ -25,7 +25,7 @@ options(scipen = 999)
 # Assignment 1
 In the subject MSB104 econometrics, this year we will hand in an assignment divided into four assignments throughout the semester. The assignments must be written and calculated in the software R. We are group one and the countries that will be representing in our assignment is: Denmark, France, Hungary, Portugal and Slovakia.
 
-In this assignment we downloaded two dataset from Eurostat. The data contains GDP (nama_10r_3gdp) and populations (demo_r_pjanaggr3,pi) for countries over the last 20 years, on a NUTS3 level. 
+In this assignment we downloaded two dataset from Eurostat. The data contains GDP (nama_10r_3gdp) and population (demo_r_pjanaggr3,pi) for countries over the last 20 years, on a NUTS3 level. 
 When we have all the information we need from the dataset, we are going to calculate the GDP per capita and describe the data by using the meta data description from Eurostat. 
 
 In the second part of this assignment we will use our data to calculate the population watertight GDP Ginie coefficients for the European NUTS2 (j) level and describe our new data. Then we are going to plot the distribution of Ginie coefficients
@@ -62,7 +62,7 @@ gdppop %>%
 
 ## GDP per Capita 
 
-To calculate GDP per capita, we took GDP and divided it by the population. And then we have multiplied by one million, so that it is represented correctly in Euros, also like it is in the unit.
+To calculate GDP per capita, we took GDP and divided it by the population. And then we have multiplied by one million, so that it is represented correctly in Euros.
 
 ```{r Calculate GDP per capita}
 #| echo = FALSE
@@ -85,34 +85,26 @@ filter(unit == "MIO_EUR" & (grepl('DK..', Region) | grepl('FR..', Region) | grep
 ```{r Mean: GDP Per Capita in all countries}
 	summarise(gdppop, GDP_per_Capita = mean(gdp_per_capita))
 ```
-<<<<<<< HEAD
-From the summary we can see that GDP per capita at NUTS3 level for all our countries was 22438,88 Euro. Since we don't have any other values to compare with we can't say to much about it, because it doesn´t give us to much information. We will therefor look at the nuts3 regions for each country. 
-=======
-From the summary we can see that GDP per capita at NUTS3 level for all our countries was 22 805,13 Euro. We take this as a starting point when we look at the countries separately. 
->>>>>>> 73c7e4c16bf71f4ff85edd22e8c317add168cc0c
+
+From the summary we can see that GDP per capita at NUTS3 level for all our countries was 22 438,88 Euro. Since we don't have any other values to compare with we can't say to much about it, because it doesn´t give us to much information. We will therefor look at the nuts3 regions for each country. 
+
 
 ```{r}
+#| echo = FALSE
 summary(gdppop)
 ```
 
-It wasn't easy to draw any conclusion from this summary above. We can see that there is a very big difference in GDP as the lowest value is 683,7 while the highest is 251 623,6. We can also see that the maximum value is high compared to the other values, as the 3rd quartile is only 18 416,7. Population and Per_capita gave us the same results, with a very low minimum and a high maximum value. 
+It wasn't easy to draw any conclusion from the summary above. We can see that there is a difference in GDP as the lowest value is 683,7 while the highest is 251 623,6. We can also see that the maximum value is high compared to the other values, as the 3rd quartile is only 18 416,7. Population and gdp_ per_capita gave us the same results, with a very low minimum and a high maximum value. 
 
-
-To get a better picture of the different countries and the opportunity to see if there are regions that stand out. We make summaries per country, because then we had the opportunity to exclude regions that stand out in futher assignments. We will also look at a spesific year for all the country to compare results with.
+To get a better picture of the different countries and the opportunity to see if there are regions that stand out. We make summaries per country, because then we have the opportunity to exclude regions that stand out in futher assignments. We will also look at a spesific year for all the country to compare results with.
 
 To get the result by country, we made a summary of GDP per capita on each country. By creating such a summary for each country, we can get an overview of whether there are major inequality within the various regions. If we find such deviations, we can choose to remove some of our regions in order not to have large inequalities.
 
-Since Hungary and Slovakia have few nuts3 regions we chose to put them together. 
+Since Hungary and Slovakia have few nuts3 regions we chose to look at them together. 
 
-<<<<<<< HEAD
+
 ### Denmark
-=======
-Denmark is a small country in Scandinavia,and they don't have many NUTS2 regions. Denmark consists of many islands, on which the regions are divided. Kobenhagen is the capital of Denmark 
->>>>>>> 73c7e4c16bf71f4ff85edd22e8c317add168cc0c
-
-Denmark is a small country in Scandinavia,and they don't have many NUTS2 regions. Denmark consists of many islands, on which the regions are divided. Kobenhagen is the capital of Denmark.  
-
-**Country level**
+  
 ```{r Denmark}
 gdppop%>%
      filter(grepl("DK...", Region)) %>%
@@ -121,12 +113,12 @@ gdppop%>%
      geom_point(lwd = .8) +
    labs(x = "Year", y = "GDP Per capita") 
 ```
-
-Denmark has no data from before 2007, so there are less data to be collected. There are two regions that stand out. Which has a higher GDP per capita than the others. When we look at the regions, it is Copenhagen and the surrounding cities that stand out. Capital cities are often richer than other regions. You can see that in Denmark as well. 
+Denmark is a small country in Scandinavia,and they don't have many NUTS3 regions. Kobenhagen is the capital of Denmark, and as we can see above it stand out together with the surrounding region. we can se that the region around the capital has had a higher growth. Capital cities are often richer than other regions. we can see that in Denmark as well. 
 
 **Regions in Denmark**
 
-To make it even more specific, we chose to look at a specific year, and find out which regions are most whealty that year and which regions come out poorly that exact year. We choose 2010.. We also chose to look at the 3 wealtiest and the 3 least wealties  regions to see if there were major differences. We will do the same with all of our countries. 
+To get an overview, we have chosen to look at 2010 for all the regions in Denmark to see which regions are the richest and least wealties.
+
 
 ```{r the whealtiest regions in Denmark}
 gdpdk <- gdppop%>%
@@ -138,18 +130,20 @@ slice_max(gdpdk, gdp_per_capita, n=3)
 
 ```{r The poorest regions in Denmark}
 slice_min(gdpdk, gdp_per_capita, n=3)
+
 ```
 
-Denmark has 11 Nuts3 regions, so it is a small country where the differences in gdp per capita are not surprisingly large, but there is a difference of around 30,000. This means that there are not large differences in the regions.
-The three Whealties regions in Denmark are kobenhagen (DK011), Kobenhagen area (DK012) and Sydjylland (DK032)
-The least wealtiest regions in Denmark are Vest- og Sydjælland (DK022), Bornholm (DK014) and Østsjælland (DK021)
+```{r}
+#| echo = FALSE
+gdpdk %>%
+summary()
+```
+The three Whealties regions in Denmark are Kobenhagen (DK011), Kobenhagen area (DK012) and Sydjylland (DK032).
+The three least wealtiest regions in Denmark are Vest- og Sydjælland (DK022), Bornholm (DK014) and Østsjælland (DK021).
 
- It is Copenhagen and the surrounding area that stand out the most, but since it is the capital of Denmark, we are guessing that most of the wealty people in Denmark lives in these regions. 
+Denmark has 11 nuts3 regions, it is the capital and the surrounding region that stands out among the richest, in the poor countries it is more even, we can see that there is 30,000 Euro between the richest and poorest.
 
 ### France
-France is a country in Western Europe, and also has colonies in other parts of the world. Paris is the capital of France. France has the largest land areas in the EU, something we see again in that they have over a hundred nuts3 regions. 
-
-**Country levels**
 
 ```{r France}
 #| echo = FALSE
@@ -161,8 +155,16 @@ gdppop%>%
    labs(x = "Year", y = "GDP Per capita")
 ```
 
+```{r}
+#| echo = FALSE
+gdppop%>%
+  filter(grepl("FR...", Region)) %>%
+  select(Population, gdp_per_capita) %>%
+  summary()
+```
+France is a country in Western Europe, they also have colonies in other parts of the world. France has the largest land areas in the EU, which we see in the fact that they have over a hundred nuts3 regions.
 
-In France there is so many nuts3 regions that the plot won´t be the best to show us how the gpd per capita is. This might be because France has colonies in other countries that are included. These colonies are located in Africa and South America which have a negative effect on the overall GDP of France. For further research we have chosen to remove these regions from the data set.
+Since France has so many nuts3 regions, it is not so easy to distinguish the different regions. We see that here too the capital Paris stands out. When we made a summary, we see that there is a difference in min and max. When we look more closely at the numbers, we can see that this may be due to France having colonies in other countries that are included. These colonies are located in Africa and South America which has a negative effect on France's overall GDP. For further research, we have chosen to remove these regions from the data set.
 
 ```{r France without the FRY regions}
 #| echo = FALSE
@@ -171,18 +173,15 @@ filter(Region %in% c("FR101", "FR102", "FR103", "FR104", "FR105", "FR106", "FR10
  select("Year", "Region", "gdp_per_capita", "Population")
 ```
 
-***Heidi: We need to take away the FRY regions in the rest of the assignement***
-
+***Heidi: We need to take away the FRY regions in the rest of the assignement, any easyer way to get in into gdppop in sted of using gdpfr1?***
 
 **Regions in France**
 
 ```{r The whealtiest regions in France}
-gdpfr1  %>%
-  filter(grepl("FR...", Region)) %>%
+gdpfr1 <- gdpfr1  %>%
   filter(Year==2010) %>%
   select(Year, Region, gdp_per_capita)
 slice_max(gdpfr1, gdp_per_capita, n=3)
-
 ```
 
 
@@ -190,13 +189,19 @@ slice_max(gdpfr1, gdp_per_capita, n=3)
 slice_min(gdpfr1, gdp_per_capita, n=3)
 ```
 
-The three wealtiest regions are Paris (FR101), Hauts-de-seine (FR105), Rhône (FRK26), Essonne(FR104), Haute-Garonne(FRJ23). Paris og Hauts-de-seine stands out clarly from the other tree regions with a large GDP pr capita.
-The five poorest regions Creuse (FRI22), Ariège (FRj21), Meuse(FRF32), Gers(FRJ24) and Aisne (FRE21) these regions have quite the same GDP pr capita. 
+```{r}
+#| echo = FALSE
+gdpfr1 %>%
+summary()
+```
 
-## Hungary ans Slovakia
-Hungary is a country in central Europe, the country's capital is Budapest.
+France now have 82 nuts3 regions. The three wealtiest regions are Paris (FR101), Hauts-de-seine (FR105) and Rhône (FRK26). Paris og Hauts-de-seine stands out clarly from the other region with a difference of approximately 50,000 Euro GDP pr capita.
+The three poorest regions Creuse (FRI22), Ariège (FRj21) and  Meuse(FRF32). These regions have quite the same GDP pr capita. 
+
+### Hungary ans Slovakia
 
 ```{r Hungary and Slovakia}
+#| echo = FALSE
 gdppop %>%
      filter (grepl('HU..', Region) | grepl('SK..', Region)) %>%
      select(Year, gdp_per_capita, Region) %>%
@@ -204,35 +209,39 @@ gdppop %>%
      geom_point(lwd = .8) +
    labs(x = "Year", y = "GDP Per capita")
 ```
+Hungary and Slovakia are both countries in Central Europe, here we see that the capitals Bratislava and Budapest both had great growth until 2008. Then Budabest went down a little while Bratislava had a larger increase. the rest of the regions have had an more steady growth.
 
-**Country level**
-
-
-This summarise above shows total GDP per capita for the last 18 years. It is 8 781,69 which is very low than the one we found for all the countries combined. Which means that Hungary has a low GDP per capita than the average for our countries.
-
-
-In the summary above, we see that Hungary has had an increase in both GDP per capita and population over the past years. We see a fairly large increase from the 3rd quartile to max. Something we will look at more closely when we look at the richest and poorest regions.
-
-**Regions in Hungary**
+**Regions in Hungary and Slovakia in 2010**
 
 ```{r The whealtiest regions in Hungary and Slovakia}
+#| echo = FALSE
 gdphusk <- gdppop%>%
-  filter(grepl('HU..', Region) | grepl('SK..', Region)) %>%
+filter(grepl('HU..', Region) | grepl('SK..', Region)) %>%
   filter(Year==2010) %>%
-  select(Region, gdp_per_capita)
+  select(Year, Region, gdp_per_capita)
 slice_max(gdphusk, gdp_per_capita, n=3)
 ```
+
+ 
 
 ```{r The poorest regions in Hungary and Slovakia}
 slice_min(gdphusk, gdp_per_capita, n=3)
 ```
 
-Hungary has 20 regions. the five Whelties is Budapest (HU110), Gyôr-Moson.Sopron (hu221), Fejèr (HU211), Komàrom-Esztergom (hu211) and Vas (HU222). Budapest is the richest region, while the other four are more even. The poorest regions are Nògràd(HU313), Szabolcs-Szatmàr-Bereg(HU323), Bèkès(HU332), Somogy (HU232) and Jàsz-Nagykun-Szolnok(HU322). Nògràd have very low GDP pr capita. and stands out compared to the others.  
+```{r}
+#| echo = FALSE
+gdphusk %>%
+summary()
+```
+
+Hungary and Slovakia has 28 regions together. The tre whelties are Bratislava (SK010), Budapest (HU110) and Trnava (SK021). The capitals of both countries have the richest region. The least wheltiest regions are Nògràd(HU313), Szabolcs-Szatmàr-Bereg(HU323). We can see that the three poorest regions belong to Hungary. which means that they have a lower GDP per capita than Slovakia in the poorest regions. We see that there is a difference between min and max in the regions of Hungary. 
+
+There is a difference of approximately 25,000 Euro between the whelties and poorest regions in Hungary. Based on these observations, Bratislava is the richest region, since we do not see any of Slovakia's regions among the lowest, we can assume that Slovakia has a higher GDP per capita than Hungary has for its inhabitants.
 
 ### Portugal
-Portugal is a country in southern Europe. Lisbon is the capital. Portugal also has two archipelagos, each representing a different region.
 
 ```{r Portugal}
+#| echo = FALSE
 gdppop%>%
      filter(grepl("PT...", Region)) %>%
      select(Year, gdp_per_capita, Region) %>%
@@ -241,9 +250,12 @@ gdppop%>%
    labs(x = "Year", y = "GDP Per capita") 
 ```
 
+Portugal is a country in southern Europe. Lisbon is the capital. Portugal also has two archipelagos, each representing a different region.
+We see steady growth in all the regions, all have had a slight decline between 2010-2012, after that there has been an increase. we also see that in Portugal the capital stands out as the richest region.
 
 
 ```{r the whealtiest regions in Portugal}
+#| echo = FALSE
 gdppt <- gdppop%>%
   filter(grepl("PT...", Region)) %>%
   filter(Year==2010) %>%
@@ -255,18 +267,17 @@ slice_max(gdppt, gdp_per_capita, n=3)
 slice_min(gdppt, gdp_per_capita, n=3)
 ```
 
-Portugal has 25 regions. The wheltiest are Lisboa(PT170), Alentejo Litoral (PT181), Algarve (PT150), Região de Leiria (PT16F) and Região de Aveiro (PT16D). We can se that Lisboa has a litle higher GDP pr capita then the rest of the wheltiest regions. The poorest regions are Tãmega e Sousa (PT11C), Alto Tãmega (PT11B), Beiras e Serra da Estrela (PT16J), Douro (PT11D) and Alto Alentejo (PT186). There are not large differences between the richest and poorest regions.     
+```{r}
+#| echo = FALSE
+gdppt %>%
+summary()
+```
 
-###Slovakia
-
-Slovakia is a country in central Europe. It is similar to Denmark, a country that does not have so many NUTS3 regions. We therefore have to keep an eye on any outcomes. The capital in Slovakia is Bratislava. 
+Portugal has 25 regions. The wheltiest are Lisboa(PT170), Alentejo Litoral (PT181) and Algarve (PT150). We can se that Lisboa has a litle higher GDP pr capita then the rest of the wheltiest regions. The poorest regions are Tãmega e Sousa (PT11C), Alto Tãmega (PT11B) and Beiras e Serra da Estrela (PT16J). There is approximatly 14,000 Euro in GDP per capita, in difference between the wealties and the poorest regions.     
 
 
-In the summary above, we see that Slovakia has had an increase in both GDP per capita and population over the past years. GDP pr capita has had a big increase, and we see a difference from 3rd quartile until max in population. In poplutaion we can se a Steady development.  
-
-**Regions in Slovakia**
-
-Slovakia has 8 regions. Therefore we have only looked at 3 regions in each category. The three Whealtiest. Bratislava (SK010), Trnava (SK021) and Zilina (SK031). again we see that the capital has a significantly higher GDP per capita than the other regions. the poorest regions are Presov (SK041), Banska Bystrica (SK032) and Kosice (SK042). the lowest is slightly lower than the other.  
+In all the countries, we see that it is the capitals that stand out the most and have the highest GDP per capita among their inhabitants. Paris has managed to have the highest GDP per capita and the poorest regions can be found in Hungary.
+ 
 
 ## Descriptive Statistics regional inequity (Gini Nuts2) and discuss briefly if there are noteworthy outliers
 
@@ -275,9 +286,7 @@ Furthermore, we will use the data to calculate population waterproof GDP Ginie c
 A Gini coefficient must be between 0 and 1. If it's 0, it means that there is little inequality, and if it's closer to 1, it means that there is a greater degree of inequality between rich and poor. We calculate a Gini coefficient by looking at how much wealth and income there is in a country and then how it is distributed among the population.
 when we have calculated the gini coefficients, we will also run a test on the data we have to see if we find outliers. Outliers are values that are either very high or very low compared to the other data we have.
 
-First out is Denmark. 
-
-### Gini all countries  
+### Gini for all countries all years  
 
 ```{r Gini for all countries }
 #| echo = FALSE
@@ -291,26 +300,23 @@ gdppop %<>%
 #for all
 gini.wtd(gdppop$gdp_per_capita, w = gdppop$Population)
 
-
 gdppop <- gdppop %<>% 
    group_by(nuts2, Year) %>%
   mutate(gini_n2= gini.wtd(gdp_per_capita, w = Population)) %>%
   ungroup() # to remove grouping
-
 ```
-
-Her ser vi for alle land, Her har vi en gini på 0,28. Vi kan også se at vi har 0 som betyr en perfekt korlasjon. Som gjør at me vil se på land for land for å finne ut hvorfor det er slik. 
 
 ```{r}
 gdppop %>% 
+  #| echo = FALSE
   filter(Year == 2010) %>% 
    distinct(nuts2, Year,.keep_all = TRUE) %>%
 select(gini_n2) %>%
 st()
 ```
- vi ser at vi har 49 observasjoner og at vi har en gini på 0
- 
 
+
+First, we look at all the regions in the selected countries. We have 49 observations. The total Gini for all countries for all years is 0.28. We can also see that we have ginis that are 0 which means a perfect correlation. We will look at each country to find out why and where there are regions that have ginis that are 0. 
 
 ```{r NUTS2 in Denmark}
 #| echo = FALSE
@@ -320,6 +326,14 @@ distinct(nuts2, Year,.keep_all =TRUE) %>%
 ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
   geom_point(lwd = .8) +
    labs(x = "Year", y = "Gini")
+```
+```{r}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "DK") %>%
+select(Year,nuts2, gini_n2) %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+  filter(Year==2010)
 ```
 
 
@@ -331,7 +345,7 @@ dkoutliers <- gdppop %>%
 dkoutliers
 ```
 
-In Denmark, we can see that the Gini coefficient is 0.15, which shows us that there is not a big difference between whealty and poor. We can also see that Denmark has a region (DK05) which is an outlier. In this region, no data has been recorded over 0 for the last 20 years. As we also have seen is that Denmark is a small country with few NUTS2 regions Which doesn't givs us much data to work with.
+In Denmark, we can see that the Gini coefficient is, which shows us that there is not a big difference between whealty and poor. We can also see that Denmark has a region (DK05) which is an outlier. In this region, no data has been recorded over 0 for the last 20 years. As we also have seen is that Denmark is a small country with few NUTS2 regions Which doesn't givs us much data to work with.
 The Outliers region is Nordjylland, which only has one single province.
 
 ### France
@@ -346,6 +360,16 @@ ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
    labs(x = "Year", y = "Gini")
 
 ```
+
+```{r}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "FR") %>%
+select(Year,nuts2, gini_n2) %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+  filter(Year==2010)
+```
+
 
 ```{r Outliers in France}
 froutliers <- gdppop %>%
@@ -459,7 +483,6 @@ gdppop2010 <- gdppop %>%
   #Keeping only 1 obs per NUTS 2
     distinct(Year, nuts2,Gini,gdp_n2,pop_n2) %>%
   mutate(gdp_per_capita = gdp_n2/pop_n2*1000000)
-
 
 ```
 
